# Boltzmann_smoke

./: .gitignore  CMakeLists.txt  README.md  init_params.json
include/: boltzmann_solver.hpp  simulation_recorder.hpp  vdb_exporter.hpp  visualizer.hpp
src/: boltzmann_solver.cu  boltzmann_solver_export.cpp  main.cpp  simulation_recorder.cpp  vdb_exporter.cpp  visualizer.cpp
